# LiveImproved

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CustomAlert.h  CustomAlert.mm  IPC_NOTES  LICENSE  Main.h  Main.mm  Makefile  README.md  SharedMemory.cpp  SharedMemory.h  intercept_keyequiv-working-with-control-keys.mm  intercept_keys.h  intercept_keys.mm  intercept_keyup_keydown.mm  libintercept_keys.dylib  log.txt  run-clang-tidy.cmake  run-tests.cmake  run.sh
daemon/: LiveObserver.mm  main.mm
dev/win/: compile.bat  compile_remote.sh
lib/: ActionHandler.cpp  ActionHandler.h  ApplicationManager.cpp  ApplicationManager.h  IPCUtils.cpp  Log.cpp  Log.h  LogHandler.cpp  PlatformDependent.h  PlatformSpecific.h  ResponseParser.cpp
lib/platform/macos/: EventHandler.h  EventHandler.mm  Events.h  Events.mm  GUI.h  GUI.mm  GUISearchBox.h  GUISearchBox.mm  IPC.cpp  IPC.h  IPCManager.cpp  IPCManager.h  IPCUtils.h  Init.mm  KeySender.h  KeySender.mm  PID.mm
mock/: ApplicationManager.h  MockApplicationManager.cpp  MockEventHandler.h  MockIPCQueue.h  MockKeySender.h  MockLiveInterface.h  MockLogHandler.cpp  MockLogHandler.h  MockPluginManager.h  MockWindow.h  MockWindowManager.h
mock/lib/platform/macos/: GUISearchBox.h  GUISearchBox.mm
src/: ActionHandler.cpp  ApplicationManager.cpp  IPCResilienceDecorator.cpp  Info.plist  JuceTheme.cpp  KeyMapper.cpp  LogHandler.cpp  Main.cpp  Main.mm  PlatformDependent.h  PluginManager.cpp  ResilientIPC.cpp  ResponseParser.cpp  ResponseParser.h  WindowManager.cpp
src/abstract/: IActionHandler.h  IEventHandler.h  IIPC.h  IIPCCore.h  IIPCQueue.h  IKeySender.h  ILiveInterface.h  ILogHandler.h  ILogger.h  IPluginManager.h  IWindow.h  IWindowManager.h
src/config/: ConfigManager.cpp  ConfigMenu.cpp  ConfigMenu.h
src/core/: ConfigManager.cpp  ConfigMenu.cpp  LogGlobal.cpp  LogHandler.cpp  PluginManager.cpp
src/daemon/: LiveObserver.h  LiveObserver.mm  main.mm
src/event/: ActionHandler.cpp  KeyMapper.cpp
src/events/: ActionHandler.cpp  KeyMapper.cpp
src/gui/: ContextMenu.cpp  DragTarget.cpp  IWindowManager.h  SearchBox.cpp  Theme.cpp  WindowManager.cpp
src/include/: ActionHandler.h  AppConfig.h  ApplicationManager.h  ConfigFile.h  ConfigManager.h  ConfigMenu.h  ContextMenu.h  DependencyContainer.h  IPC.h  IPCException.h  IPCResilienceDecorator.h  KeyMapper.h  KeySender.h  LogHandler.h  PID.h  PlatformDependent.h  PlatformInitializer.h  PluginManager.h  ResilientIPC.h  ResponseParser.h  SearchBox.h  Theme.h  Types.h  Utils.h  WindowManager.h  pch.h
src/include/config/: ConfigFile.h  ConfigManager.h  ConfigMenu.h
src/include/core/: DependencyContainer.h  LogGlobal.h  LogHandler.h  LogLevel.h  LogSink.h  PID.h  PluginManager.h  Types.h  Utils.h
src/include/core/sinks/: FileSink.h  JUCESink.h
src/include/event/: ActionHandler.h  EventHandler.h  KeyMapper.h  KeySender.h  PlatformInitializer.h
src/include/events/: ActionHandler.h  KeyMapper.h  KeySender.h
src/include/exception/: IPCException.h
src/include/gui/: SearchBox.h  Theme.h  WindowManager.h
src/include/ipc/: IPCBase.h  IPCDefinitions.h  IPCPipe.h  IPCPipeResilienceDecorator.h  IPCQueue.h  IPCRequestPipe.h  IPCResilienceDecorator.h  IPCResponsePipe.h  PipeUtil.h  RequestIDGenerator.h  ResponseParser.h
src/include/juce/: AppConfig.h  JuceApp.h  JuceHeader.h  JuceTheme.h  LimLookAndFeel.h
src/include/platform/macos/: ContextMenu.h  EventHandler.h  IPC.h  IPCCore.h  LiveInterface.h  MacUtils.h  NotificationObserver.h
src/include/platform/macos/event/: EventHandler.h
src/include/platform/windows/: ContextMenu.h  EventHandler.h  IPC.h
src/include/system/: PID.h  Path.h  PathFinder.h  PathManager.h
src/interface/: IActionHandler.h  IIPC.h  ILiveInterface.h  ILogHandler.h  IPluginManager.h  IWindow.h
src/ipc/: IPCBase.cpp  IPCPipe.cpp  IPCPipeResilienceDecorator.cpp  IPCQueue.cpp  IPCRequestPipe.cpp  IPCResilienceDecorator.cpp  IPCResponsePipe.cpp  RequestIDGenerator.cpp  ResponseParser.cpp
src/lib/: ActionHandler.cpp  ActionHandler.h  ApplicationManager.cpp  ApplicationManager.h  PlatformDependent.h  ResponseParser.cpp
src/lib/config/: ConfigManager.cpp  ConfigManager.h  ConfigMenu.cpp  ConfigMenu.h
src/lib/gui/: ContextMenu.cpp  ContextMenu.h  DragTarget.h  FocusedWidget.cpp  FocusedWidget.h  SearchBox.cpp  SearchBox.h
src/lib/platform/macos/: EventHandler.h  EventHandler.mm  EventHandlerThread.h  EventHandlerThread.mm  GUI.mm  GUISearchBox.h  GUISearchBox.mm  IPC.cpp  PID.h  PID.mm  PlatformInitializer.h
src/lib/types/: Menu.h
src/platform/macos/: ContextMenu.mm  EventHandler.mm  IPC.cpp  IPCCore.cpp  KeySender.mm  LiveInterface.mm  NotificationObserver.mm  PID.mm  PlatformInitializer.mm
src/platform/macos/event/: EventHandler.mm  KeySender.mm  PlatformInitializer.mm
src/platform/macos/gui/: ContextMenu.mm
src/platform/macos/ipc/: IPC.cpp  IPCCore.cpp  IPCPipe.cpp  IPCRequestPipe.cpp  IPCResponsePipe.cpp  PipeUtil.cpp
src/platform/macos/live/: AXAction.mm  AXAttribute.mm  AXComponent.mm  AXFinder.mm  AXInteraction.mm  AXPluginWindow.mm  AXPrinter.mm  AXWindow.mm  LiveInterface.mm
src/platform/macos/system/: PID.mm  Path.mm  PathFinder.mm  PathManager.mm
src/platform/windows/: EventHandler.cpp  IPC.cpp  KeySender.cpp  PID.cpp
src/platform/windows/event/: EventHandler.cpp  KeySender.cpp
src/platform/windows/gui/: ContextMenu.cpp
src/platform/windows/ipc/: IPCCore-old.cpp  IPCCore.cpp  PipeUtil.cpp
src/platform/windows/live/: LiveInterface.cpp
src/platform/windows/system/: PID.cpp  PathFinder.cpp  PathManager.cpp
src/types/: Plugin.h
test/: lib_config_ConfigManager.cpp  lib_platform_macos_GUISearchBox.disabled  test_ActionHandler.cpp  test_IPCPipeTestDecorator.cpp  test_KeyMapper.cpp  test_config_ConfigManager.cpp
test/core/: test_ActionHandler.cpp  test_ConfigManager.cpp
test/event/: test_KeySender.cpp
test/ipc/: test_ResponseParser.cpp
test/platform/macos/event/: test_KeySender.mm
test/platform/macos/ipc/: test_PipeUtil.cpp
test/system/: test_PathManager.cpp
(+21 files in other folders)
